--- a/Amphours Postmortem.ipynb
+++ b/Amphours Postmortem.ipynb
@@ -900,8 +900,17 @@
     "The notebook source can be found [here](https://github.com/akhilcacharya/amphours-postmortem) and the hosted notebook on GitHub [here](https://github.com/akhilcacharya/amphours-postmortem/blob/master/Amphours%20Postmortem.ipynb) \n",
     "\n",
     "\n",
-    "![alt text](phone_amphours_rip.png \"RIP\")"
+    "![alt text](/phone_amphours_rip.PNG \"RIP\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
